# wordrect

./: .gitignore  README.md  WORDS.LST  configure.ac  main.c  makefile  sort.c  sort.h  test.c  trie.c  trie.h  trieIterator.c
c/src/: main.c  makefile.am  sort.c  trie.c  trie.h  trieIterator.h
js/: TEST.LST  TrieNode.js  WordSquareSolve.js  index.js  package.json
js/lib/: SolutionIterator.js  TrieNode.js  WordSquareSolution.js  WordSquareSolver.js  trieFactory.js
js/test/: SolutionIterator.js  WordSquareSolution.js  WordSquareSolver.js
src/: main.c  makefile.am  sort.h  trie.c  trie.h  trieIterator.c
wordlists/test/: test1.lst  test2.lst
